# evviva

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: main.py
api/config/: settings.py
api/routers/: llm.py
api/services/: embedding_service.py  llm_service.py
ingestion/: create_collection.py  create_indexes.py
